# heron

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  publish.sh  release.toml  release.yml  renovate.json  verify.sh
.cargo/: config_fast_builds  fast_compiles_config
.circleci/: config.yml
.github/: dependabot.yml  semantic.yml
.github/workflows/: build.yml  look-ahead.yml  post-release.yml  pr-lints.yml  release.yml
core/: Cargo.toml
core/assets/: cubes.blend  cubes.glb
core/src/: colliding_entities.rs  collision_from_mesh.rs  collisions.rs  constraints.rs  events.rs  ext.rs  gravity.rs  layers.rs  lib.rs  physics_controller.rs  physics_time.rs  shape_from_mesh.rs  step.rs  utils.rs  velocity.rs
debug/: Cargo.toml
debug/src/: dim2.rs  dim3.rs  lib.rs  shape3d_wireframe.rs
debug/tests/: dim2.rs
examples/: collision_shapes_in_child_entity.rs  custom_schedule.rs  custom_stages.rs  debug.rs  debug_2d.rs  debug_3d.rs  demo.rs  events.rs  hierarchy.rs  kinematic_velocity_based.rs  layers.rs  quickstart.rs  ray_casting.rs
guide/: book.toml
guide/src/: SUMMARY.md  collision_shapes_in_child_entity.md  events.md  features.md  interaction.md  layers.md  quickstart.md  setup.md
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: macros.rs
rapier/: Cargo.toml  build.rs
rapier/src/: acceleration.rs  bodies.rs  body.rs  convert.rs  damping.rs  debug.rs  lib.rs  material.rs  pipeline.rs  restitution.rs  shape.rs  velocity.rs
rapier/tests/: acceleration.rs  bodies.rs  body_types.rs  children_collision_shapes.rs  constraints.rs  damping.rs  density.rs  events.rs  friction.rs  layers.rs  mass.rs  resources.rs  restitution.rs  sensor_shape.rs  velocity.rs
rapier/tests/utils/: mod.rs
src/: lib.rs
tests/: bodies.rs  config.rs  debug.rs  docs.rs  dynamic_bodies.rs  functional_tests.rs  macros.rs  resources.rs  smoke_test.rs
