[workspace]
members = ["core", "debug", "rapier", "macros"]

[package]
name = "heron"
version = "0.11.1" # auto-version
authors = ["Jonathan Cornaz"]
edition = "2018"
license = "MIT"
description = "An ergonomic physics API for 2d and 3d bevy games. (powered by rapier)"
repository = "https://github.com/jcornaz/heron/"
keywords = ["game", "gamedev", "physics", "collision", "bevy"]
categories = ["game-development", "simulation"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
2d = ["heron_rapier/2d"]
3d = ["heron_rapier/3d"]
debug-2d = ["2d", "heron_debug/2d"]
debug-3d = ["3d", "heron_debug/3d"]

[dependencies]
heron_core = { version = "^0.11.1", path = "core" }
heron_macros = { version = "^0.11.1", path = "macros" }
heron_rapier = { version = "^0.11.1", path = "rapier" }
heron_debug = { version = "^0.11.1", path = "debug", optional = true }
bevy = { version = "^0.5.0", default-features = false }

[dev-dependencies]
bevy = "0.5"
skeptic = "0.13"
rstest = "0.7"

[build-dependencies]
cfg_aliases = "0.1.1"

[[example]]
name = "demo"
required-features = ["2d"]

[[example]]
name = "debug"
required-features = ["debug-2d"]

[[example]]
name = "debug_3d"
required-features = ["debug-3d"]

[[example]]
name = "quickstart"
required-features = ["2d"]

[[example]]
name = "collision_shapes_in_child_entity"
required-features = ["debug-2d"]

[[example]]
name = "layers"
required-features = ["2d"]

[[example]]
name = "events"
required-features = ["2d"]

[[example]]
name = "ray_casting"
required-features = ["2d"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## \\[Unreleased\\]"
replace = "## [Unreleased]\n\n\n\n## [{{version}}] - {{date}}"
exactly = 1
prerelease = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...v{{version}}"
exactly = 1
prerelease = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\[Unreleased\\]: "
replace = "[Unreleased]: ../../compare/v{{version}}...HEAD\n[{{version}}]: "
exactly = 1
prerelease = true

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "//! heron = \\{ version = \"[0-9a-z\\.-]+\""
replace = "//! heron = { version = \"{{version}}\""
prerelease = true

[[package.metadata.release.pre-release-replacements]]
file = "README.md"
search = "heron = \\{ version = \"[0-9a-z\\.-]+\""
replace = "heron = { version = \"{{version}}\""
prerelease = true

[[package.metadata.release.pre-release-replacements]]
file = "guide/src/quickstart.md"
search = "heron = \\{ version = \"[0-9a-z\\.-]+\""
replace = "heron = { version = \"{{version}}\""
prerelease = true
