[workspace]
members = ["core", "debug", "rapier", "macros"]

[package]
name = "heron"
version = "2.2.0"
rust-version = "1.57"
edition = "2021"
authors = ["Jonathan Cornaz"]
license = "MIT"
description = "An ergonomic physics API for 2d and 3d bevy games. (powered by rapier)"
repository = "https://github.com/jcornaz/heron/"
keywords = ["game", "gamedev", "physics", "collision", "bevy"]
categories = ["game-development", "simulation"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["collision-from-mesh"]
collision-from-mesh = ["heron_core/collision-from-mesh"]
2d = ["heron_rapier/2d"]
3d = ["heron_rapier/3d", "heron_core/3d"]
debug-2d = ["2d", "heron_debug/2d"]
debug-3d = ["3d", "heron_debug/3d"]
enhanced-determinism = ["heron_rapier/enhanced-determinism"]

[dependencies]
heron_core = { version = "2.2.0", path = "core" }
heron_macros = { version = "2.2.0", path = "macros" }
heron_rapier = { version = "2.2.0", path = "rapier" }
heron_debug = { version = "2.2.0", path = "debug", optional = true }
bevy = { version = "0.6.0", default-features = false }

[dev-dependencies]
bevy = { version = "0.6.0", default-features = false, features=["render", "x11"] }
rstest = "0.12"

[build-dependencies]
cfg_aliases = "0.1.1"

[[example]]
name = "demo"
required-features = ["2d"]

[[example]]
name = "debug_2d"
required-features = ["debug-2d"]

[[example]]
name = "debug_3d"
required-features = ["debug-3d"]

[[example]]
name = "quickstart"
required-features = ["2d"]

[[example]]
name = "collision_shapes_in_child_entity"
required-features = ["debug-2d"]

[[example]]
name = "layers"
required-features = ["2d"]

[[example]]
name = "events"
required-features = ["2d"]

[[example]]
name = "ray_casting"
required-features = ["2d"]

[package.metadata.release]
tag = true
