[package]
name = "heron_core"
version = "3.0.0"
rust-version = "1.60"
edition = "2021"
authors = ["Jonathan Cornaz"]
license = "MIT"
description = "Core components and resources to use Heron"
repository = "https://github.com/jcornaz/heron/"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
3d = []
collision-from-mesh = ["bevy/bevy_render"]

[dependencies]
bevy = { version = "0.7.0", default-features = false }
duplicate = "0.4.0"
smallvec = "1.9"

[dev-dependencies]
rstest = "0.15"
approx = "0.5.1"

[build-dependencies]
cfg_aliases = "0.1.1"
