[package]
name = "heron_core"
version = "3.0.0"
rust-version = "1.60"
edition = "2021"
authors = ["Jonathan Cornaz"]
license = "MIT"
description = "Core components and resources to use Heron"
repository = "https://github.com/jcornaz/heron/"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
3d = []
collision-from-mesh = ["bevy/bevy_render"]

[dependencies]
bevy = { version = "0.8.0", default-features = false }
duplicate = "0.4.1"
smallvec = "1.8"

[dev-dependencies]
rstest = "0.13"
approx = "0.5.1"

[build-dependencies]
cfg_aliases = "0.1.1"
