[package]
name = "heron_core"
version = "3.0.0"
rust-version = "1.60"
edition = "2021"
authors = ["Jonathan Cornaz"]
license = "MIT"
description = "Core components and resources to use Heron"
repository = "https://github.com/jcornaz/heron/"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
3d = ["heron_core_v5/3d"]
collision-from-mesh = ["heron_core_v5/collision-from-mesh", "bevy/bevy_render", "bevy/bevy_scene", "bevy/bevy_asset"]

[dependencies]
heron_core_v5 = { package = "heron_core", version = "5.0" }
bevy = { version = "0.8.0", default-features = false }

[dev-dependencies]
rstest = "0.15"
approx = "0.5.1"

[build-dependencies]
cfg_aliases = "0.1.1"
