[package]
name = "heron_debug"
version = "2.4.1"
rust-version = "1.60"
edition = "2021"
authors = ["Jonathan Cornaz"]
license = "MIT"
description = "Rendering of Heron's collision shapes for debugging purposes"
repository = "https://github.com/jcornaz/heron/"

[features]
default = []
2d = ["heron_rapier/2d", "bevy_prototype_lyon", "lyon_path"]

[dependencies]
heron_core = { version = "2.4.1", path = "../core" }
heron_rapier = { version = "2.4.1", path = "../rapier" }
bevy = { version = "0.7.0", default-features = false, features = ["bevy_render"] }
bevy_prototype_lyon = { version = "0.5.0", optional = true }
lyon_path = { version = "0.17.4", optional = true }
fnv = "1.0"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-udeps.ignore]
normal = ["lyon_path", "bevy_prototype_lyon"] # False positive, they are used but only when 2d is enabled and 3d disabled
