[package]
name = "heron_debug"
version = "4.0.0"
rust-version = "1.60"
edition = "2021"
authors = ["Jonathan Cornaz"]
license = "MIT"
description = "Rendering of Heron's collision shapes for debugging purposes"
repository = "https://github.com/jcornaz/heron/"

[features]
default = []
2d = ["heron_debug_v5/2d"]
3d = ["heron_debug_v5/3d"]

[dependencies]
heron_debug_v5 = { package = "heron_debug", version = "5.0" }

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-udeps.ignore]
normal = ["lyon_path", "bevy_prototype_lyon"] # False positive, they are used but only when 2d is enabled and 3d disabled
