[package]
name = "heron_macros"
version = "0.9.0" # auto-version
authors = ["Jonathan Cornaz"]
edition = "2018"
license = "MIT"
description = "proc-macros for heron"
repository = "https://github.com/jcornaz/heron/"

[lib]
proc-macro = true

[dependencies]
heron_core = { version = "^0.9.0", path = "../core" }
syn = "^1.0"
quote = "^1.0"
