[package]
name = "heron_macros"
version = "0.13.0"
rust-version = "1.56"
edition = "2021"
authors = ["Jonathan Cornaz"]
license = "MIT"
description = "proc-macros for heron"
repository = "https://github.com/jcornaz/heron/"

[lib]
proc-macro = true

[dependencies]
heron_core = { version = "^0.13.0", path = "../core" }
syn = "1.0"
quote = "1.0"
