[package]
name = "heron_rapier"
version = "0.5.1" # auto-version
authors = ["Jonathan Cornaz"]
edition = "2018"
license = "MIT"
description = "Physics behavior for Heron, using rapier"
repository = "https://github.com/jcornaz/heron/"

[features]
default = []
2d = ["rapier2d"]
3d = ["rapier3d"]

[dependencies]
heron_core = { path = "../core", version = "^0.5.0"}
bevy = { version = "^0.5.0", default-features = false }
rapier2d = { version = "^0.8.0", optional = true }
rapier3d = { version = "^0.8.0", optional = true }
fnv = "^1.0"
crossbeam = "^0.8.0"

[dev-dependencies]
bevy = { version = "0.5", default-features = false }
rstest = "0.7"
