[package]
name = "heron_rapier"
version = "0.12.1"
rust-version = "1.56"
edition = "2021"
authors = ["Jonathan Cornaz"]
license = "MIT"
description = "Physics behavior for Heron, using rapier"
repository = "https://github.com/jcornaz/heron/"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
2d = ["rapier2d"]
3d = ["rapier3d", "heron_core/3d"]

[dependencies]
heron_core = { version = "^0.12.0", path = "../core" }
bevy = { git="https://github.com/jrxb/bevy.git", default-features = false }
rapier2d = { version = "^0.11.1", optional = true }
rapier3d = { version = "^0.11.1", optional = true }
fnv = "^1.0"
crossbeam = "^0.8.0"

[dev-dependencies]
bevy = { git="https://github.com/jrxb/bevy.git", default-features = false }
rstest = "0.7"

[build-dependencies]
cfg_aliases = "0.1.1"
