[package]
name = "heron_rapier"
version = "2.2.0"
rust-version = "1.57"
edition = "2021"
authors = ["Jonathan Cornaz"]
license = "MIT"
description = "Physics behavior for Heron, using rapier"
repository = "https://github.com/jcornaz/heron/"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
2d = ["rapier2d"]
3d = ["rapier3d", "heron_core/3d"]
enhanced-determinism = ["rapier2d/enhanced-determinism", "rapier3d/enhanced-determinism"]

[dependencies]
heron_core = { version = "2.2.0", path = "../core" }
bevy = { version = "0.6.0", default-features = false }
rapier2d = { version = "0.11.1", optional = true }
rapier3d = { version = "0.11.1", optional = true }
fnv = "1.0"
crossbeam = "0.8.0"

[dev-dependencies]
bevy = { version = "0.6.0", default-features = false }
rstest = "0.12"

[build-dependencies]
cfg_aliases = "0.1.1"
